--- a/css/style .css
+++ b/css/style .css
@@ -10,6 +10,7 @@ body, html {
     height: auto; 
     display: block; 
     margin: 0 auto;
+    z-index: 1;
 }
 
 .container {
@@ -45,7 +46,6 @@ body, html {
     width: auto; 
     vertical-align: middle; 
 }
-
 
 #sub-title {
     font-size: 24px; 
@@ -87,8 +87,62 @@ body, html {
 }
 
 #github-link img:hover {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); /* 悬浮时的阴影效果 */
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); 
 }
+
+.topic {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; 
+    gap: 20px; 
+    padding: 20px; 
+    position: absolute; 
+    top: 108%;
+    left: 0;
+    right: 0;
+    z-index: 1000; 
+}
+
+.box {
+    width: 12%; 
+    border-radius: 15px; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    stroke: #989898; 
+    text-align: center;
+    padding: 5px 5px 5px 5px;
+}
+
+.content {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    /* scrollbar-width: none; */
+    position: absolute;
+    top: calc(108% + 150px); 
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    border-top: 2px solid #000000; /* delete after completing */
+    border-bottom: 2px solid #000000; /* delete after completing */
+}
+
+.content::-webkit-scrollbar {
+    display: none; 
+}
+
+.content-section {
+    width: 100vw; 
+    height: 70vh; 
+    flex-shrink: 0;
+}
+
+.box.selected {
+    background-color: #bfb491;
+}
+
 
 /* 当屏幕宽度小于1600像素时 */
 @media (max-width: 1600px) {
