--- a/css/style.css
+++ b/css/style.css
@@ -145,30 +145,16 @@ body, html {
     align-items: center; 
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     stroke: #989898; 
+    background-color: rgba(250, 249, 238, 0.8);
     text-align: center;
     padding: 5px 5px 5px 5px;
+    cursor: pointer;
 }
 
-.content {
-    display: flex;
-    flex-direction: column; 
-    overflow-y: auto; 
-    position: absolute;
-    top: calc(102vh + 200px);
-    left: 0;
-    right: 0;
-    z-index: 999;
+.box:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); 
 }
 
-.content::-webkit-scrollbar {
-    display: none; 
-}
-
-.content-section {
-    width: 100%; 
-    height: auto; 
-    flex-shrink: 0;
-}
 
 .box.selected {
     background-color: #bfb491;
@@ -178,11 +164,26 @@ body, html {
 /* 当屏幕宽度小于1600像素时 */
 @media (max-width: 1600px) {
     .title {
-        top: 0px; 
+        top: 50px; 
+    }
+
+    #title {
+        font-size: 42px; 
+        max-width: 500px;
+    }
+
+    #sub-title {
+        font-size: 20px; 
+        font-weight: normal; 
+        opacity: 0.7; 
+        max-width: 500px;
+        word-wrap: break-word;
+        padding-top: calc(42px + 42px + 15px + 30px); 
     }
     
     #names-list {
         top: 0px;
+        padding-top: calc(42px + 42px + 15px + 30px + 20px + 20px + 70px);
     }
 }
 
