--- a/css/content.css
+++ b/css/content.css
@@ -109,6 +109,13 @@ h3 {
     justify-content: center; 
     align-items: stretch; 
   }
+
+  .recommendation_container {
+    display: flex;  /* Aligns children in a row */
+    justify-content: center; /* Centers children horizontally */
+    align-items: stretch; /* Centers children vertically */
+    gap: 20px; /* Optional: Adds some space between the plots */
+}
   
   #heatmap1, #heatmap2 {
     flex: 1; 
