--- a/css/content.css
+++ b/css/content.css
@@ -113,8 +113,8 @@ h3 {
   .recommendation_container {
     display: flex;  /* Aligns children in a row */
     justify-content: center; /* Centers children horizontally */
-    align-items: stretch; /* Centers children vertically */
-    /* gap: 20px; Optional: Adds some space between the plots */
+    align-items: center; /* Centers children vertically */
+    
 }
   
   #heatmap1, #heatmap2 {
